# zgovernor

./: .gitignore  CMakeLists.txt  README.md  zgovernor.service
example/: zgovernor.ini
rpm/: zgovernor.spec
src/: config.cpp  config.h  governor.cpp  governor.h  main.cpp
